fix small bugs for bangumi detail page

--- a/app/src/main/res/layout/bangumi_info_view.xml
+++ b/app/src/main/res/layout/bangumi_info_view.xml
@@ -130,6 +130,7 @@
             android:layout_toEndOf="@id/japanese_title_tag"
             android:textSize="6pt"
             android:textColor="@color/titleColor"
+            android:alpha="0.9"
             android:layout_marginTop="5dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="15dp"
@@ -152,6 +153,7 @@
             android:layout_height="wrap_content"
             android:textSize="6pt"
             android:textColor="@color/titleColor"
+            android:alpha="0.9"
             android:layout_marginTop="5dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="15dp"
