--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -2,9 +2,10 @@
 <RelativeLayout
     android:id="@+id/comment_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/avatar"
@@ -97,6 +98,7 @@
         android:layout_marginEnd="10dp"
         android:backgroundTint="@color/divider"
         app:cardCornerRadius="5dp"
+        android:visibility="gone"
         app:cardElevation="0dp"
         android:layout_below="@id/like">
 
