finish comment, some part unstyling

--- a/app/src/main/res/layout/comment_detail_view.xml
+++ b/app/src/main/res/layout/comment_detail_view.xml
@@ -5,6 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/cross"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:backgroundTint="@color/app_background"
+        android:src="@drawable/cross"
+        android:layout_gravity="end"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/divider"/>
+
     <TextView
         android:id="@+id/test"
         android:layout_width="match_parent"
