finish search bangumi and user

--- a/app/src/main/res/layout/reply_layout.xml
+++ b/app/src/main/res/layout/reply_layout.xml
@@ -13,15 +13,15 @@
         android:id="@+id/replied_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="6.5pt"
-        android:textColor="@color/titleColor"/>
+        android:textSize="7.5pt"
+        android:textColor="@color/button_color"/>
 
     <TextView
         android:id="@+id/replied_content"
         android:layout_marginStart="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="6.5pt"
+        android:textSize="7.5pt"
         android:textColor="@color/titleColor"/>
 
 </LinearLayout>
