--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_margin="20dp"
-        android:minWidth="50dp"
-        android:maxWidth="50dp"
-        android:minHeight="50dp"
-        android:maxHeight="50dp"/>
+        android:minWidth="40dp"
+        android:maxWidth="40dp"
+        android:minHeight="40dp"
+        android:maxHeight="40dp"/>
 
     <TextView
         android:id="@+id/username"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/avatar"
         android:layout_marginTop="20dp"
-        android:textSize="7pt"
+        android:textSize="7.5pt"
         android:textColor="@color/titleColor"
         android:alpha="0.9"/>
 
@@ -45,7 +45,7 @@
         android:layout_below="@id/date"
         android:layout_marginTop="10dp"
         android:textColor="@color/titleColor"
-        android:textSize="7pt"
+        android:textSize="7.5pt"
         android:alpha="0.9"/>
 
     <ImageView
@@ -102,11 +102,28 @@
         app:cardElevation="0dp"
         android:layout_below="@id/like">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/replies"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/replies"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" />
+
+            <TextView
+                android:text="@string/view_all_replies"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="6.5pt"
+                android:textColor="@color/button_color"
+                android:layout_below="@id/replies"/>
+
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
