--- a/app/src/main/res/layout/comment_main_view.xml
+++ b/app/src/main/res/layout/comment_main_view.xml
@@ -66,6 +66,20 @@
 
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/comment_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="7.5pt"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/comment_list"
             android:layout_width="match_parent"
