--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="android:textSize">7pt</item>
     </style>
 
+    <style name="actionBarStyle" parent="AppTheme">
+        <item name="windowActionBarOverlay">true</item>
+    </style>
+
 </resources>
