--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="score_color">#ffae42</color>
     <color name="button_color">#0077be</color>
     <color name="select_image_color">#383838</color>
+    <color name="error_message_color">#ff0000</color>
 </resources>
