add viewpager2 to the user page, enabling sliding

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.aniscoreandroid.SignUpActivity">
+    tools:context="com.example.aniscoreandroid.SignupActivity">
 
     <TextView
         android:text="Sign Up"
