--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,6 +15,8 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             app:tabIndicatorColor="@color/colorPrimary"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabTextColor="@color/titleColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
