--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -2,128 +2,114 @@
 <androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".UserActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/page">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/app_background">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:orientation="vertical"
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            />
+
+        <ImageView
+            android:id="@+id/avatar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="70dp"
+            android:maxWidth="70dp"
+            android:minHeight="70dp"
+            android:maxHeight="70dp"
+            android:layout_marginTop="185dp"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/app_background">
+            app:layout_constraintTop_toBottomOf="@id/avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="6dp"
+            android:layout_marginStart="25dp"
+            android:textSize="10pt"
+            android:textColor="@color/titleColor"/>
 
-            <ImageView
-                android:id="@+id/background"
-                android:layout_width="match_parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_height="220dp"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"
-                />
+        <TextView
+            android:id="@+id/following"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            android:textSize="7pt"
+            app:layout_constraintTop_toBottomOf="@id/username"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-            <ImageView
-                android:id="@+id/avatar"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="80dp"
-                android:maxWidth="80dp"
-                android:minHeight="80dp"
-                android:maxHeight="80dp"
-                android:layout_marginTop="175dp"
-                android:layout_marginStart="10dp"/>
+        <TextView
+            android:id="@+id/follower"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:textSize="7pt"
+            app:layout_constraintTop_toBottomOf="@id/username"
+            app:layout_constraintStart_toEndOf="@id/following"/>
 
-            <TextView
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/avatar"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="6dp"
-                android:layout_marginStart="25dp"
-                android:textSize="10pt"
-                android:textColor="@color/titleColor"/>
+        <com.google.android.material.button.MaterialButton
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+            android:id="@+id/follow_status"
+            app:layout_constraintTop_toBottomOf="@id/background"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:width="120dp"
+            android:textAlignment="center"
+            android:textSize="6pt"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
+            android:backgroundTint="@color/button_color"
+            android:textColor="@color/app_background"
+            android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/following"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="15dp"
-                android:textSize="7pt"
-                app:layout_constraintTop_toBottomOf="@id/username"
-                app:layout_constraintStart_toStartOf="parent"/>
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider"
+            app:layout_constraintTop_toBottomOf="@id/following"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="15dp"/>
 
-            <TextView
-                android:id="@+id/follower"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                android:textSize="7pt"
-                app:layout_constraintTop_toBottomOf="@id/username"
-                app:layout_constraintStart_toEndOf="@id/following"/>
-
-            <com.google.android.material.button.MaterialButton
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                android:id="@+id/follow_status"
-                app:layout_constraintTop_toBottomOf="@id/background"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
-                android:width="120dp"
-                android:textAlignment="center"
-                android:textSize="6pt"
-                android:paddingTop="7dp"
-                android:paddingBottom="7dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:backgroundTint="@color/button_color"
-                android:textColor="@color/app_background"
-                android:layout_height="wrap_content"/>
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider"
-                app:layout_constraintTop_toBottomOf="@id/following"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="15dp"/>
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:background="@color/app_background"
-                android:id="@+id/user_navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:menu="@menu/user_navigation_bar"
-                app:layout_constraintTop_toBottomOf="@id/divider"
-                app:layout_constraintStart_toStartOf="parent"
-                app:labelVisibilityMode="labeled"
-                app:elevation="0dp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                app:layout_constraintTop_toBottomOf="@id/user_navigation"
-                android:background="@color/divider"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <FrameLayout
-            android:id="@id/container"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/user_navigation"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabTextColor="@color/titleColor"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:layout_constraintTop_toBottomOf="@id/divider"/>
 
-    </LinearLayout>
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/user_navigation"
+            app:layout_constraintTop_toBottomOf="@id/tabs"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
