--- a/app/src/main/res/layout/scored_bangumi_view.xml
+++ b/app/src/main/res/layout/scored_bangumi_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,7 +13,6 @@
         android:layout_marginEnd="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
 
     <TextView
         android:id="@+id/no_bangumi"
