--- a/app/src/main/res/layout/user_home_view.xml
+++ b/app/src/main/res/layout/user_home_view.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/scored_bangumi"
