--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
     <EditText
         android:id="@+id/email"
         android:textColor="#000000"
-        android:hint="Enter email address"
+        android:hint="@string/enter_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -39,7 +39,7 @@
     <EditText
         android:id="@+id/password"
         android:textColor="#000000"
-        android:hint="Enter password"
+        android:hint="@string/enter_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
-            android:text="Sign up"
+            android:text="@string/sign_up"
             android:padding="10dp"
             android:backgroundTint="@color/button_color"
             android:textColor="@color/app_background" />
