--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,104 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.aniscoreandroid.SignupActivity">
 
-    <TextView
-        android:text="Sign Up"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
-        android:textSize="13pt"/>
-
-    <TextView
-        android:id="@+id/signup_error"
-        android:textColor="@color/error_message_color"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="6pt"/>
-
-    <EditText
-        android:id="@+id/enter_username"
-        android:textColor="#000000"
-        android:hint="Enter username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="30dp"
-        android:inputType="text"/>
-
-    <EditText
-        android:id="@+id/enter_email"
-        android:textColor="#000000"
-        android:hint="Enter email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="30dp"
-        android:inputType="textEmailAddress"/>
-
-    <EditText
-        android:id="@+id/enter_password"
-        android:textColor="#000000"
-        android:hint="Password must be at least 8 characters"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="30dp"
-        android:inputType="textPassword"/>
-
-
-    <EditText
-        android:id="@+id/confirm_password"
-        android:textColor="#000000"
-        android:hint="Confirm your password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="30dp"
-        android:inputType="textPassword"/>
-
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity="center">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <com.google.android.material.button.MaterialButton
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-            android:id="@+id/create_account"
-            android:layout_width="wrap_content"
+        <TextView
+            android:text="@string/sign_up"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Create Account"
-            android:padding="10dp"
-            android:backgroundTint="@color/button_color"
-            android:textColor="@color/app_background" />
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:textSize="13pt"/>
 
-
-        <com.google.android.material.button.MaterialButton
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-            android:id="@+id/cancel"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/signup_error"
+            android:textColor="@color/error_message_color"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:text="Cancel"
-            android:padding="10dp"
-            android:backgroundTint="@color/button_color"
-            android:textColor="@color/app_background" />
+            android:gravity="center"
+            android:textSize="6pt"/>
+
+        <EditText
+            android:id="@+id/enter_username"
+            android:textColor="#000000"
+            android:hint="@string/enter_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="45dp"
+            android:layout_marginTop="30dp"
+            android:inputType="text"/>
+
+        <EditText
+            android:id="@+id/enter_email"
+            android:textColor="#000000"
+            android:hint="@string/enter_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="45dp"
+            android:layout_marginTop="30dp"
+            android:inputType="textEmailAddress"/>
+
+        <EditText
+            android:id="@+id/enter_password"
+            android:textColor="#000000"
+            android:hint="@string/set_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="45dp"
+            android:layout_marginTop="30dp"
+            android:inputType="textPassword"/>
+
+
+        <EditText
+            android:id="@+id/confirm_password"
+            android:textColor="#000000"
+            android:hint="@string/confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="45dp"
+            android:layout_marginTop="30dp"
+            android:inputType="textPassword"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center">
+
+            <com.google.android.material.button.MaterialButton
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                android:id="@+id/create_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/create_account"
+                android:padding="10dp"
+                android:backgroundTint="@color/button_color"
+                android:textColor="@color/app_background" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                android:id="@+id/cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:text="@string/cancel"
+                android:padding="10dp"
+                android:backgroundTint="@color/button_color"
+                android:textColor="@color/app_background" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
