--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.aniscoreandroid.MainActivity">
+    tools:context="com.example.aniscoreandroid.activity.MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
