--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:scrollbars="none"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.aniscoreandroid.SignupActivity">
+    tools:context="com.example.aniscoreandroid.activity.SignupActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
