--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -6,7 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity"
+    tools:context=".activity.MainActivity"
     android:id="@+id/page">
 
     <androidx.constraintlayout.widget.ConstraintLayout
